--- a/web/elm/index.html
+++ b/web/elm/index.html
@@ -11170,38 +11170,58 @@ Elm.Ev3Status.make = function (_elm) {
    $Task = Elm.Task.make(_elm);
    var _op = {};
    var decodePaused = A2($Json$Decode._op[":="],"paused",$Json$Decode.bool);
-   var Model = F2(function (a,b) {    return {paused: a,runtime: b};});
-   var initModel = A2(Model,false,{ramFree: -1,ramUsed: -1,swapFree: -1,swapUsed: -1});
+   var Model = F3(function (a,b,c) {    return {paused: a,active: b,runtime: c};});
+   var initModel = A3(Model,false,true,{ramFree: -1,ramUsed: -1,swapFree: -1,swapUsed: -1});
    var RuntimeStats = F4(function (a,b,c,d) {    return {ramFree: a,ramUsed: b,swapFree: c,swapUsed: d};});
+   var ActiveState = function (a) {    return {active: a};};
    var Status = function (a) {    return {ctor: "Status",_0: a};};
    var SetRuntimeStats = function (a) {    return {ctor: "SetRuntimeStats",_0: a};};
    var TogglePaused = {ctor: "TogglePaused"};
    var view = F2(function (address,model) {
+      var src = function (active) {    return active ? "/images/active.png" : "/images/fainted.png";};
+      var over = F2(function (value,threshold) {    return _U.cmp(value,threshold) < 0 ? "danger" : "success";});
       var btnColor = function (paused) {    return $Basics.not(paused) ? "btn-success" : "btn-danger";};
       var pausingLabel = function (model) {    return $Basics.not(model.paused) ? "Pause" : "Resume";};
       return A2($Html.div,
-      _U.list([$Html$Attributes.$class("container")]),
+      _U.list([$Html$Attributes.$class("container-fluid")]),
       _U.list([A2($Html.div,
               _U.list([$Html$Attributes.$class("row")]),
               _U.list([A2($Html.div,
+                      _U.list([$Html$Attributes.$class("col-md-3")]),
+                      _U.list([A2($Html.button,
+                      _U.list([A2($Html$Events.onClick,address,Status(TogglePaused))
+                              ,$Html$Attributes.classList(_U.list([{ctor: "_Tuple2",_0: "btn",_1: true}
+                                                                  ,{ctor: "_Tuple2",_0: btnColor(model.paused),_1: true}]))]),
+                      _U.list([$Html.text(pausingLabel(model))]))]))
+                      ,A2($Html.div,
+                      _U.list([$Html$Attributes.$class("col-md-9")]),
+                      _U.list([A2($Html.img,_U.list([A2($Html$Attributes.attribute,"src",src(model.active))]),_U.list([]))]))]))
+              ,A2($Html.div,
+              _U.list([$Html$Attributes.$class("row")]),
+              _U.list([A2($Html.div,
               _U.list([$Html$Attributes.$class("col-md-12")]),
-              _U.list([A2($Html.button,
-              _U.list([A2($Html$Events.onClick,address,Status(TogglePaused))
-                      ,$Html$Attributes.classList(_U.list([{ctor: "_Tuple2",_0: "btn",_1: true},{ctor: "_Tuple2",_0: btnColor(model.paused),_1: true}]))]),
-              _U.list([$Html.text(pausingLabel(model))]))]))]))
-              ,A2($Html.div,
-              _U.list([$Html$Attributes.$class("row")]),
-              _U.list([A2($Html.div,_U.list([$Html$Attributes.$class("col-md-3")]),_U.list([$Html.text("RAM free")]))
-                      ,A2($Html.div,_U.list([$Html$Attributes.$class("col-md-3")]),_U.list([$Html.text(" RAM used")]))
-                      ,A2($Html.div,_U.list([$Html$Attributes.$class("col-md-3")]),_U.list([$Html.text(" Swap free")]))
-                      ,A2($Html.div,_U.list([$Html$Attributes.$class("col-md-3")]),_U.list([$Html.text(" Swap used")]))]))
-              ,A2($Html.div,
-              _U.list([$Html$Attributes.$class("row")]),
-              _U.list([A2($Html.div,_U.list([$Html$Attributes.$class("col-md-3")]),_U.list([$Html.text($Basics.toString(model.runtime.ramFree))]))
-                      ,A2($Html.div,_U.list([$Html$Attributes.$class("col-md-3")]),_U.list([$Html.text($Basics.toString(model.runtime.ramUsed))]))
-                      ,A2($Html.div,_U.list([$Html$Attributes.$class("col-md-3")]),_U.list([$Html.text($Basics.toString(model.runtime.swapFree))]))
-                      ,A2($Html.div,_U.list([$Html$Attributes.$class("col-md-3")]),_U.list([$Html.text($Basics.toString(model.runtime.swapUsed))]))]))]));
+              _U.list([A2($Html.table,
+              _U.list([$Html$Attributes.classList(_U.list([{ctor: "_Tuple2",_0: "table",_1: true},{ctor: "_Tuple2",_0: "table-bordered",_1: true}]))]),
+              _U.list([A2($Html.thead,
+                      _U.list([]),
+                      _U.list([A2($Html.th,_U.list([]),_U.list([$Html.text("RAM free (M)")]))
+                              ,A2($Html.th,_U.list([]),_U.list([$Html.text(" RAM used (M)")]))
+                              ,A2($Html.th,_U.list([]),_U.list([$Html.text(" Swap free (M)")]))
+                              ,A2($Html.th,_U.list([]),_U.list([$Html.text(" Swap used (M)")]))]))
+                      ,A2($Html.tbody,
+                      _U.list([]),
+                      _U.list([A2($Html.tr,
+                      _U.list([]),
+                      _U.list([A2($Html.td,
+                              _U.list([$Html$Attributes.$class(A2(over,model.runtime.ramFree,10))]),
+                              _U.list([$Html.text($Basics.toString(model.runtime.ramFree))]))
+                              ,A2($Html.td,_U.list([]),_U.list([$Html.text($Basics.toString(model.runtime.ramUsed))]))
+                              ,A2($Html.td,
+                              _U.list([$Html$Attributes.$class(A2(over,model.runtime.swapFree,10))]),
+                              _U.list([$Html.text($Basics.toString(model.runtime.swapFree))]))
+                              ,A2($Html.td,_U.list([]),_U.list([$Html.text($Basics.toString(model.runtime.swapUsed))]))]))]))]))]))]))]));
    });
+   var SetActive = function (a) {    return {ctor: "SetActive",_0: a};};
    var SetPaused = function (a) {    return {ctor: "SetPaused",_0: a};};
    var fetchPaused = $Effects.task(A2($Task.map,
    Status,
@@ -11227,6 +11247,7 @@ Elm.Ev3Status.make = function (_elm) {
       {case "NoOp": return {ctor: "_Tuple2",_0: model,_1: $Effects.none};
          case "SetPaused": var result = A2($Maybe.withDefault,model.paused,_p0._0);
            return {ctor: "_Tuple2",_0: _U.update(model,{paused: result}),_1: $Effects.none};
+         case "SetActive": return {ctor: "_Tuple2",_0: _U.update(model,{active: _p0._0.active}),_1: $Effects.none};
          case "TogglePaused": return {ctor: "_Tuple2",_0: model,_1: togglePaused};
          default: return {ctor: "_Tuple2",_0: _U.update(model,{runtime: _p0._0}),_1: $Effects.none};}
    });
@@ -11236,9 +11257,11 @@ Elm.Ev3Status.make = function (_elm) {
                                   ,update: update
                                   ,view: view
                                   ,RuntimeStats: RuntimeStats
+                                  ,ActiveState: ActiveState
                                   ,Model: Model
                                   ,Status: Status
-                                  ,SetRuntimeStats: SetRuntimeStats};
+                                  ,SetRuntimeStats: SetRuntimeStats
+                                  ,SetActive: SetActive};
 };Elm.Ev3Dashboard = Elm.Ev3Dashboard || {};
 Elm.Ev3Dashboard.make = function (_elm) {
    "use strict";
@@ -11258,6 +11281,13 @@ Elm.Ev3Dashboard.make = function (_elm) {
    $StartApp = Elm.StartApp.make(_elm),
    $Task = Elm.Task.make(_elm);
    var _op = {};
+   var activeState = Elm.Native.Port.make(_elm).inboundSignal("activeState",
+   "Ev3Status.ActiveState",
+   function (v) {
+      return typeof v === "object" && "active" in v ? {_: {}
+                                                      ,active: typeof v.active === "boolean" ? v.active : _U.badPort("a boolean (true or false)",
+                                                      v.active)} : _U.badPort("an object with fields `active`",v);
+   });
    var runtimeStats = Elm.Native.Port.make(_elm).inboundSignal("runtimeStats",
    "Ev3Status.RuntimeStats",
    function (v) {
@@ -11272,8 +11302,9 @@ Elm.Ev3Dashboard.make = function (_elm) {
                                                                                                                v.swapUsed)} : _U.badPort("an object with fields `ramFree`, `ramUsed`, `swapFree`, `swapUsed`",
       v);
    });
-   var statusInputs = A2($Signal.map,$Ev3Status.Status,A2($Signal.map,$Ev3Status.SetRuntimeStats,runtimeStats));
-   var inputs = _U.list([statusInputs]);
+   var statusInputs = _U.list([A2($Signal.map,$Ev3Status.Status,A2($Signal.map,$Ev3Status.SetRuntimeStats,runtimeStats))
+                              ,A2($Signal.map,$Ev3Status.Status,A2($Signal.map,$Ev3Status.SetActive,activeState))]);
+   var inputs = $List.concat(_U.list([statusInputs]));
    var update = F2(function (action,model) {
       var _p0 = action;
       var _p1 = A2($Ev3Status.update,_p0._0,model.status);
@@ -11284,7 +11315,8 @@ Elm.Ev3Dashboard.make = function (_elm) {
    var view = F2(function (address,model) {
       return A2($Html.div,
       _U.list([$Html$Attributes.$class("container-fluid"),A2($Html$Attributes.attribute,"role","main")]),
-      _U.list([A2($Ev3Status.view,address,model.status)]));
+      _U.list([A2($Html.h1,_U.list([$Html$Attributes.$class("text-center")]),_U.list([$Html.text("Robot Dashboard")]))
+              ,A2($Ev3Status.view,address,model.status)]));
    });
    var init = {ctor: "_Tuple2",_0: {status: $Ev3Status.initModel},_1: $Effects.batch(_U.list([$Ev3Status.initEffect]))};
    var app = $StartApp.start({init: init,update: update,view: view,inputs: inputs});
